TestRepo2/src/objects/ReportTmpObj__c.object
<CustomObject>
    <fields>
        <fullName>br__c</fullName>
        <label>br</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cl__c</fullName>
        <label>cl</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ds__c</fullName>
        <label>ds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ou__c</fullName>
        <label>ou</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ow__c</fullName>
        <label>ow</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ss__c</fullName>
        <label>ss</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ReportTmpObj</label>
    <nameField>
        <label>ReportTmpObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReportTmpObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>